// Fanous Dormitory & Library Management System - Client ERD
// Paste this file into https://dbdiagram.io to generate a clear visual ERD.
// Laravel technical tables such as sessions, cache, jobs, and password reset tokens are intentionally omitted.

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  phone varchar
  role varchar
  status varchar
  theme varchar
  profile_photo_path varchar
  email_verified_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table dorm_rooms {
  id bigint [pk, increment]
  room_number varchar [unique]
  capacity tinyint
  floor varchar
  status varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table dorm_students {
  id bigint [pk, increment]
  registered_by bigint [ref: > users.id]
  dorm_room_id bigint [ref: > dorm_rooms.id]
  admission_decision_by bigint [ref: > users.id]
  full_name varchar
  father_name varchar
  phone varchar
  whatsapp varchar
  email varchar
  tazkira_number varchar
  education_place varchar
  department_or_grade varchar
  province varchar
  room_number varchar
  bed_number varchar
  guarantor_name varchar
  guarantor_relation varchar
  guarantor_phone varchar
  guarantor_tazkira_number varchar
  guarantor_job varchar
  guarantor_permanent_address varchar
  guarantor_current_address varchar
  document_names json
  profile_photo_path varchar
  application_date date
  education_score decimal
  eligibility_score tinyint
  eligibility_notes text
  guarantee_deposit_amount int
  dorm_expense_fee_amount int
  registration_card_fee_amount int
  registration_payment_status varchar
  registration_paid_at date
  admitted_at timestamp
  status varchar
  joined_at date
  notes text
  created_at timestamp
  updated_at timestamp
}

Table student_collections {
  id bigint [pk, increment]
  dorm_student_id bigint [ref: > dorm_students.id]
  recorded_by bigint [ref: > users.id]
  type varchar
  amount int
  collected_at date
  period varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table food_finances {
  id bigint [pk, increment]
  dorm_student_id bigint [ref: > dorm_students.id]
  recorded_by bigint [ref: > users.id]
  type varchar
  amount int
  recorded_at date
  period varchar
  vendor_or_source varchar
  description text
  created_at timestamp
  updated_at timestamp
}

Table dorm_expenses {
  id bigint [pk, increment]
  created_by bigint [ref: > users.id]
  category varchar
  title varchar
  amount decimal
  spent_on date
  paid_to varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table library_members {
  id bigint [pk, increment]
  registered_by bigint [ref: > users.id]
  member_code varchar [unique]
  full_name varchar
  father_name varchar
  phone varchar
  email varchar
  tazkira_number varchar
  education_place varchar
  department_or_grade varchar
  address varchar
  profile_photo_path varchar
  membership_fee int
  monthly_fee_daily_fine int
  monthly_fee_fine_amount int
  payment_status varchar
  last_paid_at date
  next_payment_due_at date
  last_fee_reminder_at date
  joined_at date
  membership_expires_at date
  status varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table books {
  id bigint [pk, increment]
  registered_by bigint [ref: > users.id]
  isbn varchar
  title varchar
  author varchar
  publisher varchar
  language varchar
  edition varchar
  published_year smallint
  pages smallint
  category varchar
  shelf_code varchar
  barcode varchar [unique]
  total_copies int
  available_copies int
  status varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table book_copies {
  id bigint [pk, increment]
  book_id bigint [ref: > books.id]
  copy_code varchar [unique]
  barcode varchar [unique]
  shelf_code varchar
  status varchar
  condition varchar
  purchase_price int
  notes text
  created_at timestamp
  updated_at timestamp
}

Table book_loans {
  id bigint [pk, increment]
  library_member_id bigint [ref: > library_members.id]
  book_id bigint [ref: > books.id]
  book_copy_id bigint [ref: > book_copies.id]
  recorded_by bigint [ref: > users.id]
  loan_code varchar [unique]
  borrowed_at date
  due_at date
  condition_out varchar
  returned_at date
  condition_in varchar
  fine_amount int
  status varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table membership_cards {
  id bigint [pk, increment]
  cardable_id bigint
  cardable_type varchar
  created_by bigint [ref: > users.id]
  scope varchar
  card_number varchar [unique]
  holder_name varchar
  father_name varchar
  issued_at date
  expires_at date
  fee_amount decimal
  payment_status varchar
  paid_at date
  notes text
  created_at timestamp
  updated_at timestamp
}

Table finance_categories {
  id bigint [pk, increment]
  name varchar
  slug varchar
  type varchar
  color varchar
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

Table finance_donors {
  id bigint [pk, increment]
  name varchar
  phone varchar
  notes text
  created_at timestamp
  updated_at timestamp
}

Table finance_projects {
  id bigint [pk, increment]
  name varchar
  category varchar
  estimated_budget bigint
  status varchar
  started_on date
  completed_on date
  notes text
  created_at timestamp
  updated_at timestamp
}

Table finance_transactions {
  id bigint [pk, increment]
  transaction_number varchar [unique]
  type varchar
  finance_category_id bigint [ref: > finance_categories.id]
  finance_donor_id bigint [ref: > finance_donors.id]
  finance_project_id bigint [ref: > finance_projects.id]
  dorm_student_id bigint [ref: > dorm_students.id]
  recorded_by bigint [ref: > users.id]
  expected_amount bigint
  amount bigint
  transaction_date date
  source_or_payee varchar
  payer_name varchar
  payee_name varchar
  receipt_number varchar
  payment_method varchar
  status varchar
  notes text
  description text
  attachment_required boolean
  payment_month tinyint
  payment_year smallint
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table student_payments {
  id bigint [pk, increment]
  dorm_student_id bigint [ref: > dorm_students.id]
  finance_transaction_id bigint [ref: > finance_transactions.id]
  recorded_by bigint [ref: > users.id]
  payment_month tinyint
  payment_year smallint
  expected_amount bigint
  paid_amount bigint
  remaining_amount bigint
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table finance_attachments {
  id bigint [pk, increment]
  finance_transaction_id bigint [ref: > finance_transactions.id]
  uploaded_by bigint [ref: > users.id]
  file_path varchar
  original_name varchar
  mime_type varchar
  size bigint
  created_at timestamp
  updated_at timestamp
}

Table finance_audit_logs {
  id bigint [pk, increment]
  finance_transaction_id bigint [ref: > finance_transactions.id]
  performed_by bigint [ref: > users.id]
  action varchar
  old_values json
  new_values json
  created_at timestamp
  updated_at timestamp
}

Table audit_logs {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  action varchar
  model_type varchar
  model_id bigint
  old_values json
  new_values json
  ip_address varchar
  user_agent varchar
  created_at timestamp
  updated_at timestamp
}

// Polymorphic membership card ownership:
// membership_cards.cardable_type = App\Models\DormStudent or App\Models\LibraryMember
Ref: dorm_students.id < membership_cards.cardable_id
Ref: library_members.id < membership_cards.cardable_id
